feat(command): add command handler

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@adonisjs/tsconfig/tsconfig.app.json",
   "compilerOptions": {
+    "types": ["./types/import_meta"],
     "rootDir": "./",
     "outDir": "./build"
   }
