--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -61,6 +61,7 @@
     "@adonisjs/lucid": "^21.6.1",
     "@vinejs/vine": "^3.0.1",
     "luxon": "^3.7.2",
+    "nanoid": "^5.1.6",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2"
   },
