--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -20,12 +20,14 @@
     "@tailwindcss/vite": "^4.1.16",
     "@tanstack/vue-query": "^5.90.5",
     "@vee-validate/zod": "^4.15.1",
+    "@vueuse/core": "^14.0.0",
     "axios": "^1.12.2",
     "daisyui": "^5.3.9",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.16",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.22",
+    "vue-i18n": "^11.1.12",
     "vue-router": "^4.5.1",
     "vue-toastification": "2.0.0-rc.5",
     "zod": "^4.1.12"
